# skillmaker

./: .env  .env.example  pyproject.toml
.claude/skills/: skill-maker.md
sample_skills/cold-email-outreach/: index.ts
sample_skills/cold-email-outreach/refs/: account-tiering.ts  buying-signals.ts  copy-and-messaging.ts  linkedin-ads-integration.ts  metrics-and-deliverability.ts  whatsapp-outreach.ts
sample_skills/linkedin-content-strategy/: SKILL.md  index.ts
sample_skills/linkedin-content-strategy/references/: calendar-templates.md  icp-and-pillars.md
sample_skills/linkedin-content-strategy/refs/: algorithm-hacks.ts  calendar-templates.ts  content-discovery.ts  icp-and-pillars.ts
sample_skills/linkedin-post-writer/: SKILL.md  index.ts
sample_skills/linkedin-post-writer/references/: engagement-data.md  hooks.md  lead-magnet-system.md  templates.md  tone-octane.md
sample_skills/linkedin-post-writer/refs/: engagement-data.ts  hooks.ts  lead-magnet-system.ts  templates.ts  tone-octane.ts
sample_skills/sales-objections/: index.ts
sample_skills/sales-objections/refs/: objection-cheat-sheet.ts
skillmaker/: analyzer.py  bundle.py  cli.py  config.py  converter.py  generator.py  skills_db.py
skillmaker/fetchers/: __init__.py  detect.py  firecrawl.py  linkedin.py  pdf.py  youtube.py
tests/: conftest.py  test_analyzer.py  test_bundle.py  test_cli.py  test_config.py  test_converter.py  test_detect.py  test_e2e.py  test_firecrawl.py  test_generator.py  test_linkedin.py  test_pdf.py  test_skills_db.py  test_youtube.py
