[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillmaker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic==0.103.1",
    "httpx==0.28.1",
    "pypdf==6.11.0",
    "python-dotenv==1.0.0",
    "typer==0.12.0",
]

[project.scripts]
skillmaker = "skillmaker.cli:app"

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "respx==0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
